@@ -1,6 +1,7 @@
 5.3.2 -> 5.4a1:
 
 5.3.1 -> 5.3.2:
+    - jbj: fix: handle the V4 signature plaintext correctly.
     - jbj: add the DSA pubkey/signature to all packages produced by rpmbuild.
     - jbj: bc: disable DSA signhash16 checks for now.
     - jbj: bc: convert DSA digest from binary, no hex needed.
